bin/testsuite/tests/compiler/src/errors/compiler3097.swg
#global testerror "Err0741"
#assert(1.0 << 1)
